# florence

./: .gitignore  ChangeLog  NEWS  autogen.sh  configure.ac  meson.build  meson_options.txt
data/: .gitignore  Makefile.am  florence.desktop.in.in  meson.build  org.florence.gschema.xml  org.florence.gschema.xml.in
data/layouts/: meson.build
data/styles/: meson.build
data/styles/bright/: .gitignore  Makefile.am  meson.build
data/styles/default/: .gitignore  Makefile.am  meson.build  symbols.xml.in.in
data/styles/default/sounds/: .gitignore  meson.build
data/styles/flat/: .gitignore  florence.patch  meson.build
data/styles/hard/: .gitignore  Makefile.am  meson.build
data/svg11/: meson.build
debian/: README.source  changelog  control  copyright  florence.examples  rules  watch
debian/patches/: 0001-Add-nonet-option-to-xmllint-and-xsltproc-calls.patch  series
docs/: Makefile.am  meson.build  userdoc.pot
docs/C/: florence.xml
docs/de/: .gitignore  de.po
docs/fr/: .gitignore  fr.po
docs/ru/: .gitignore  ru.po
editor/: editor.py
fedora/: florence.spec
mageia/: florence-glibh.patch  florence.spec
po/: .gitignore  LINGUAS  POTFILES.in  de.po  fr.po  it.po  meson.build  ru.po
qt/data/layouts/: florence.xml
qt/data/styles/: default.style
qt/doc/tutorial/: tutorial.html
qt/examples/demo/: .gitignore  demo.pro  main.cpp
qt/examples/helloworld/: .gitignore  helloworld.pro  main.cpp
qt/examples/qtwebkit/: .gitignore  mainwindow.ui  qtwebkit.pro
qt/src/: .gitignore  florence-qt.pro  florence.cpp  florence.h  key.cpp  key.h  keymap.cpp  keymap.h  settings.cpp  settings.h  style.cpp  styleitem.cpp  styleshape.cpp  symbol.cpp  symbol.h
qt/standalone/: .gitignore  config.ui  florence.pro  florenceexception.cpp  florenceexception.h  keysym2ucs.c  keysym2ucs.h  main.cpp  manager.cpp  manager.h  service.cpp  service.h  settingsdialog.cpp  settingsdialog.h  settingservice.h  settingsservice.cpp  simulator.cpp  simulator.h  systemmap.cpp  systemmap.h  systemmapkey.cpp  systemmapkey.h
src/: .gitignore  Makefile.am  controller.c  controller.h  florence.c  florence.h  fsm.c  key.c  main.c  menu.c  menu.h  meson.build  service.c  service.h  settings-window.c  settings.c  settings.h  status.c  status.h  style.c  system.h  trayicon.c  trayicon.h  view.c  xkeyboard.c
src/lib/: florence.c  florence.h  meson.build
web/: docs.sh  home.php  messages.pot  xhtml.sh
web/demo/: Makefile  edit.js  florence.css  florence.html  florence.js  florence.py  keymap_generator.py
web/locale/fr_FR/LC_MESSAGES/: messages.mo  messages.po
web/locale/ru_RU/LC_MESSAGES/: messages.mo  messages.po
web/svg/: keymap.py
